--- a/components/layout/header/header.module.scss
+++ b/components/layout/header/header.module.scss
@@ -5,7 +5,7 @@
 .header {
   justify-content: center;
   align-items: center;
-  min-height:86px;
+  min-height:120px;
   border-bottom: 1px solid $header-split;
   display: flex;
   flex-direction: column;
@@ -32,6 +32,10 @@
   letter-spacing: 1px;
 }
 
+.menuEntry {
+  padding-left: 16px;
+}
+
 .menuEntry:hover {
   color: $accent;
   cursor:pointer;
@@ -47,6 +51,6 @@
 
 @media screen and (max-width:$mobile-width) {
   .menu {
-    padding: 0px 8px 0 8px;
+    padding: 0px 16px 0 16px;
   }
 }
