--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -1,7 +1,9 @@
+@import "styles/colors";
+
 $site-width: 1280px;
 $mobile-width: 533px;
 
-$max-width: 1400px;
+$max-width: 1600px;
 $min-height: 160vh;
 
 .page {
@@ -10,6 +12,7 @@ $min-height: 160vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: rgb(34, 34, 69);
 }
 
 .pageContents {
@@ -19,15 +22,22 @@ $min-height: 160vh;
 
 
 @media screen and (max-width: $max-width) {
-  .landing-tiles {
-    padding: 0px 32px 0 32px;
-  }
+  // .landing-tiles {
+  //   padding: 0px 16px 0 8px;
+  // }
+
+  // .landing-tiles-2 {
+  //   padding: 0px 16px 0 8px;
+  // }
 }
 
 @media screen and (max-width:$mobile-width) {
-  .landing-tiles {
-    padding: 0px 8px 0 8px;
-  }
+  // .landing-tiles {
+  //   padding: 0px 8px 0 8px;
+  // }
+  // .landing-tiles-2 {
+  //   padding: 0px 8px 0 8px;
+  // }
 }
 
 
