--- a/components/layout/header/logo/logo.module.scss
+++ b/components/layout/header/logo/logo.module.scss
@@ -2,7 +2,8 @@
 @import "styles/layout.scss";
 
 .logo {
-  font-size: 42px;
+  font-size: 32px;
+  // font-size:max(calc(1rem + 0.5vw), 8px);
   // padding: 6px 0 0 24px;
   display:inline-block;
   cursor:pointer;
@@ -22,10 +23,9 @@
 }
 
 .secondaryLogoText {
-  font-size: 18px;
-  font-weight: 600;
-  letter-spacing: 2px;
+  font-size: 16px;
+  font-weight: 300;
+  letter-spacing: 4px;
   color: $accent;
-  font-family:'Courier New', Courier, monospace;
   float: right;
 }
