--- a/components/pages/landing-page/landing-page-template.module.scss
+++ b/components/pages/landing-page/landing-page-template.module.scss
@@ -3,45 +3,46 @@
 
 .textSection {
   display: flex;
-  margin-top: 64px;
+  // margin-top: 64px;
   gap: 32px;
-  font-size: 16px;
   line-height: 1.5rem;
+  margin-top:16px;
   justify-content: space-between;
 }
 
-@media screen and (max-width: 600px) {
+.landingTiles {
+  // margin-top: 64px;
+}
+
+@media screen and (max-width: 1000px) {
   .textSection {
     flex-direction: column;
     // padding: 16px;
   }
+  .left, .right {
+    justify-content: center;
+  }
+
+  .textSection:nth-child(even) {
+    flex-direction: column-reverse;
+  }
 }
+
 
 .imageSection {
   // border-radius: 90%;
   flex-grow: 1;
+  border-radius: 32px;
+
   flex-shrink: 1;
-  max-width: 90%;
-  height: 100%;
-  max-height: 600px;
+  max-width: 100%;
+  max-height: 550px;
   object-fit: contain;
 }
 
-.left {
+.left, .right {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-basis: 100%;
-}
-
-.right {
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  flex-basis: 100%;
-  flex-shrink: 1;
-}
-
-.page {
-  
 }
