--- a/components/ui/molecules/common/card.module.scss
+++ b/components/ui/molecules/common/card.module.scss
@@ -1,15 +1,22 @@
 @import "styles/colors";
 @import "styles/layout";
+@import "styles/fonts.scss";
+
 .card {
   position: relative;
+  $max-dynamic-width: 800px;
 
   // background-color: #2168c4;
   // box-shadow: #090912 0px 0px 24px;
 
   .title {
-    font-size: 48px;
-    margin-bottom:24px;
+    font-size: calc(16px + 2vw);
+    font-weight: 600;
+    @media screen and (min-width: $max-dynamic-width) {
+      font-size: $font-size-h2;
+    }
     line-height: 4rem;
+    margin-bottom: 8px;
   }
 
   @media screen and (max-width: $max-width) {
@@ -18,7 +25,12 @@
 
   }
   .contents {
-    font-size: 18px;
-    line-height: 2rem;
+    font-size: calc(12px + 1vw);
+    @media screen and (min-width: $max-dynamic-width) {
+      line-height: 32px;
+      font-size: 19px;
+    }
+    font-family: Exo;
+    line-height: calc(18px + 1vw);
   }
 }
