--- a/components/ui/molecules/common/card.module.scss
+++ b/components/ui/molecules/common/card.module.scss
@@ -20,7 +20,7 @@
   }
 
   @media screen and (max-width: $max-width) {
-    padding: 48px 16px;
+    padding: 16px 16px;
     box-shadow: none;
 
   }
@@ -30,7 +30,7 @@
       line-height: 32px;
       font-size: 19px;
     }
-    font-family: Exo;
+    font-family: Poppins;
     line-height: calc(18px + 1vw);
   }
 }
