--- a/components/ui/atoms/button/button.module.scss
+++ b/components/ui/atoms/button/button.module.scss
@@ -2,17 +2,23 @@
 @import "styles/fonts";
 
 .button {
+  &:hover {
+    filter: brightness(120%);
+  }
+
   z-index: 1000;
   border: none;
   // neumorphism
   border-radius: 8px;
   background: $white;
-  box-shadow: $primary 0px 0px 244px;
+  box-shadow: $primary 0px 0px 4px;
   min-width: 48px;
   min-height: 48px;
-  font-size: 16px;
-  font-weight: bold;
-  padding: 12px;
+  font-size: 19px;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  padding: 14px;
+  font-family:Poppins; 
   color: $white-alternative-text;
   z-index: 1;
   cursor: pointer;
