--- a/components/pages/landing-page/landing-page-template.module.scss
+++ b/components/pages/landing-page/landing-page-template.module.scss
@@ -48,3 +48,11 @@
   justify-content: center;
   flex-basis: 100%;
 }
+
+.get-a-quote {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 42px 0;
+  width: 100%;
+}
