--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700');
+@import url('http://fonts.googleapis.com/css?family=Lato:300,400,500,600,700');
+
+@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700');
+@import url('https://fonts.googleapis.com/css?family=MuseoModerno:400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Exo:400,500,700');
+
 ul {
   list-style: none;
 }
