--- a/components/layout/header/header.module.scss
+++ b/components/layout/header/header.module.scss
@@ -15,6 +15,21 @@
   box-shadow: black 0 0 5px;
 }
 
+
+
+@media screen and (max-width: 768px) {
+  .hiddenMobile {
+    display: none !important;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hiddenDesktop {
+    display: none !important;
+  }
+}
+
+
 .headerContents {
   display: flex;
   flex-direction: row;
