--- a/components/pages/landing-page/landing-page-template.module.scss
+++ b/components/pages/landing-page/landing-page-template.module.scss
@@ -57,7 +57,15 @@
   width: 100%;
 }
 
+.get-a-blog {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 16px 0;
+  width: 100%;
+}
+
 .blogCarousel {
-  margin-top: 32px;
+  margin-top: 86px;
   margin-bottom: 32px;
 }
