--- a/components/landing/quote/get-quote.module.scss
+++ b/components/landing/quote/get-quote.module.scss
@@ -1,3 +1,12 @@
-.text-quote {
-  font-size: 32px;
+.textQuote {
+  font-size: 14px;
+  display: flex;
+  margin-top: 16px;
 }
+
+.quoteDevelopmentButtons {
+  // margin-bottom: 16px;
+}
+
+
+.textQuote {}
