--- a/components/layout/header/logo/logo.module.scss
+++ b/components/layout/header/logo/logo.module.scss
@@ -18,7 +18,7 @@
 
 @media screen and (max-width:$mobile-width) {
   .logo {
-    padding: 8px 16px 0 16px;
+    padding: 8px 16px 8px 16px;
   }
 }
 
