--- a/components/landing/quote/get-quote.module.scss
+++ b/components/landing/quote/get-quote.module.scss
@@ -1,7 +1,12 @@
 .textQuote {
-  font-size: 14px;
+  font-size: 18px;
+  font-weight: 500 !important;
+  letter-spacing: 2px;
+  
   display: flex;
-  margin-top: 16px;
+  font-family: Poppins;
+  padding: 16px 32px 16px 32px;
+  line-height: 24px;
 }
 
 .quoteDevelopmentButtons {
