--- a/components/ui/molecules/common/card.module.scss
+++ b/components/ui/molecules/common/card.module.scss
@@ -17,6 +17,7 @@
     }
     line-height: 2rem;
     margin-bottom: 32px;
+    font-family: Poppins;
   }
 
   @media screen and (max-width: $max-width) {
