--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -4,7 +4,7 @@ $site-width: 1280px;
 $mobile-width: 533px;
 
 $max-width: 1600px;
-$min-height: 160vh;
+$min-height: 86vh;
 
 .page {
   width:100%;
@@ -13,6 +13,12 @@ $min-height: 160vh;
   flex-direction: column;
   align-items: center;
   background-color: rgb(34, 34, 69);
+}
+
+.page-alternative {
+  background: radial-gradient(circle, rgb(84, 88, 187) 5%, rgb(3, 110, 182) 51%, rgb(62, 64, 191) 66%, rgb(61, 171, 136) 100%);
+  background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
 }
 
 .pageContents {
