--- a/components/pages/quote/quote.module.scss
+++ b/components/pages/quote/quote.module.scss
@@ -53,6 +53,11 @@
   width:50%;
   flex: 1 1 0.5;
   margin: 0 0 32px 0;
+  @media screen and (max-width: 700px) {
+    width: 100%;
+    max-width:100%;
+    margin: 0;
+  }
 }
 
 .section {
