--- a/components/pages/portfolio/portfolio-template.module.scss
+++ b/components/pages/portfolio/portfolio-template.module.scss
@@ -52,7 +52,7 @@
   }
 
   .pentest-anim-mobile {
-    animation: enlargeFontMobile 2s ease-in-out 2 forwards;
+    // animation: enlargeFontMobile 2s ease-in-out 2 forwards;
     text-decoration: underline;
   }
 
