--- a/components/pages/quote/quote.module.scss
+++ b/components/pages/quote/quote.module.scss
@@ -69,7 +69,9 @@
 }
 
 .email {
-  margin-top: 8px;
+  margin-top: 32px;
+  margin-bottom: 8px;
+  font-weight: 800;
   font-size: 16px;
   display: flex;
   align-items: center;
