--- a/styles/components/stack.scss
+++ b/styles/components/stack.scss
@@ -40,6 +40,9 @@
   }
 
   & > .tools {
+    @media screen and (max-width: 500px) {
+      margin-top: 60px;
+    }
     z-index: 10;
     display: flex;
     flex-wrap: wrap;
