--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -13,16 +13,11 @@ body {
 h1 {
   line-height: 48px;
 }
+
 @keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
 }
 
 details {
