--- a/components/pages/landing-page/landing-page-template.module.scss
+++ b/components/pages/landing-page/landing-page-template.module.scss
@@ -10,6 +10,18 @@
   justify-content: space-between;
 }
 
+.cta {
+  text-align: center;
+
+  margin-top: 64px;
+  font-size: 2rem;
+
+  p {
+    font-size: 1.2rem;
+    margin-top: 16px;
+  }
+}
+
 .landingTiles {
   // margin-top: 64px;
 }
