--- a/styles/components/hero.scss
+++ b/styles/components/hero.scss
@@ -1,9 +1,14 @@
 .heroContainer {
   padding-top: 64px;
   padding-bottom: 64px;
-  background: radial-gradient(circle, rgb(117, 119, 255) 5%, rgb(5, 144, 237) 51%, rgb(77, 80, 238) 66%, rgb(78, 214, 171) 100%);
+  background: radial-gradient(circle, 
+    rgb(222, 35, 35) 5%,      /* Bright, vibrant red */
+    rgb(201, 20, 20) 51%,     /* Slightly darker, intense red */
+    rgb(164, 24, 24) 66%,     /* Deep, rich red */
+    rgb(128, 10, 10) 100%     /* Dark red with a luxurious feel */
+  );
   background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+  animation: gradient 15s ease infinite;
 }
 
 .hero-section {
